--- a/public/global.css
+++ b/public/global.css
@@ -6,8 +6,11 @@
 
 * {
   box-sizing: border-box;
-  touch-action: manipulation;
+  touch-action: pan-x;
   overscroll-behavior: none;
+  user-select: none; 
+  -webkit-user-select: none; 
+  -ms-user-select: none;
 }
 
 html {
@@ -16,7 +19,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  /* -webkit-tap-highlight-color: rgba(0,0,0,0); */
 }
 
 a {
@@ -27,13 +30,13 @@ html, body {
   height: 100%;
   min-height: 100%;
   max-height: 100%;
-  -webkit-touch-callout: none;
+  /* -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   -o-user-select: none;
-  user-select: none;
+  user-select: none; */
 }
 
 body {
